[gd_scene load_steps=17 format=2]

[ext_resource path="res://scripts/Image.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://assets/dropper.png" type="Texture" id=3]
[ext_resource path="res://assets/dropperhover.png" type="Texture" id=4]
[ext_resource path="res://assets/wthv.png" type="Texture" id=5]
[ext_resource path="res://assets/penhover.png" type="Texture" id=6]
[ext_resource path="res://assets/pen.png" type="Texture" id=7]
[ext_resource path="res://assets/new_theme.tres" type="Theme" id=8]
[ext_resource path="res://assets/ershover.png" type="Texture" id=12]
[ext_resource path="res://assets/erasor.png" type="Texture" id=13]
[ext_resource path="res://assets/buckethover.png" type="Texture" id=14]
[ext_resource path="res://scripts/Min.gd" type="Script" id=15]
[ext_resource path="res://assets/bucket.png" type="Texture" id=16]
[ext_resource path="res://assets/pixGD.ttf" type="DynamicFontData" id=17]
[ext_resource path="res://scenes/Menu.gd" type="Script" id=18]

[sub_resource type="DynamicFont" id=1]
size = 1
font_data = ExtResource( 17 )

[node name="Control" type="Node2D"]
script = ExtResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 512, 304 )
current = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 0.209
anchor_right = 1.0
anchor_bottom = 0.209
margin_left = -32.0
margin_top = -99.4
margin_right = -16.0
margin_bottom = -23.4
rect_scale = Vector2( 2, 2 )
mouse_filter = 0
theme = ExtResource( 8 )
script = ExtResource( 15 )
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="PentTextureButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_right = 16.0
margin_bottom = 16.0
mouse_default_cursor_shape = 2
theme = ExtResource( 8 )
toggle_mode = true
pressed = true
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 6 )
texture_hover = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ErasorTextureButton" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_top = 20.0
margin_right = 16.0
margin_bottom = 36.0
mouse_default_cursor_shape = 2
theme = ExtResource( 8 )
toggle_mode = true
texture_normal = ExtResource( 13 )
texture_hover = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Eyedropper" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_top = 40.0
margin_right = 16.0
margin_bottom = 56.0
mouse_default_cursor_shape = 2
theme = ExtResource( 8 )
toggle_mode = true
texture_normal = ExtResource( 3 )
texture_hover = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Bucket" type="TextureButton" parent="CanvasLayer/VBoxContainer"]
margin_top = 60.0
margin_right = 16.0
margin_bottom = 76.0
theme = ExtResource( 8 )
toggle_mode = true
texture_normal = ExtResource( 16 )
texture_hover = ExtResource( 14 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel2" type="Panel" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -57.0
margin_right = 208.0
margin_bottom = -24.0
theme = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker" type="ColorPickerButton" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 32.0
margin_top = -56.0
margin_right = 120.0
margin_bottom = -24.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 1 )
flat = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPicker2" type="ColorPickerButton" parent="CanvasLayer"]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 112.0
margin_top = -56.0
margin_right = 208.0
margin_bottom = -24.0
theme = ExtResource( 8 )
custom_fonts/font = SubResource( 1 )
flat = true
color = Color( 1, 1, 1, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer2" type="VBoxContainer" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -80.0
margin_top = -56.0
margin_right = -16.0
margin_bottom = -8.0
theme = ExtResource( 8 )
alignment = 2
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HSlider" type="HSlider" parent="CanvasLayer/VBoxContainer2"]
margin_top = 3.0
margin_right = 70.0
margin_bottom = 19.0
theme = ExtResource( 8 )
min_value = 100.0
max_value = 1000.0
step = 50.0
value = 100.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="CanvasLayer/VBoxContainer2"]
margin_top = 23.0
margin_right = 70.0
margin_bottom = 48.0
theme = ExtResource( 8 )
text = "100"
placeholder_text = "100%"
caret_blink = true
caret_blink_speed = 0.5
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
margin_right = 128.0
margin_bottom = 32.0
mouse_filter = 0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FileOptionButton" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_right = 39.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
theme = ExtResource( 8 )
text = "File"

[node name="FilePopupMenu" type="PopupMenu" parent="CanvasLayer/HBoxContainer/FileOptionButton"]
margin_top = 32.0
margin_right = 120.0
margin_bottom = 152.0
theme = ExtResource( 8 )
items = [ "New", null, 0, false, false, 0, 0, null, "", false, "Open", null, 0, false, false, 1, 0, null, "", false, "Save as", null, 0, false, false, 2, 0, null, "", false, "Item 3", null, 0, false, false, 3, 0, null, "", false ]
hide_on_item_selection = false
hide_on_checkable_item_selection = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OpenFileDialog" type="FileDialog" parent="CanvasLayer/HBoxContainer/FileOptionButton"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 608.0
rect_min_size = Vector2( 150, 52.5 )
theme = ExtResource( 8 )
window_title = "Open a File"
resizable = true
mode = 0
access = 2
current_dir = "/Users/AEPBS/Documents/GitHub/Pixgd"
current_path = "/Users/AEPBS/Documents/GitHub/Pixgd/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SaveFileDialog" type="FileDialog" parent="CanvasLayer/HBoxContainer/FileOptionButton"]
margin_top = 64.0
margin_right = 1024.0
margin_bottom = 608.0
rect_min_size = Vector2( 150, 52.5 )
theme = ExtResource( 8 )
resizable = true
access = 2
current_dir = "/Users/AEPBS/Documents/GitHub/Pixgd"
current_path = "/Users/AEPBS/Documents/GitHub/Pixgd/"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ConfirmationDialog" type="WindowDialog" parent="CanvasLayer/HBoxContainer/FileOptionButton"]
visible = true
margin_left = 416.0
margin_top = 224.0
margin_right = 592.0
margin_bottom = 367.0
window_title = "New file"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Height" type="SpinBox" parent="CanvasLayer/HBoxContainer/FileOptionButton/ConfirmationDialog"]
margin_left = 74.0
margin_top = 54.0
margin_right = 168.0
margin_bottom = 79.0
suffix = "pix"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Width" type="SpinBox" parent="CanvasLayer/HBoxContainer/FileOptionButton/ConfirmationDialog"]
margin_left = 74.0
margin_top = 22.0
margin_right = 168.0
margin_bottom = 47.0
suffix = "pix"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="CanvasLayer/HBoxContainer/FileOptionButton/ConfirmationDialog"]
margin_left = 5.0
margin_top = 25.0
margin_right = 40.0
margin_bottom = 40.0
text = "width"

[node name="Label3" type="Label" parent="CanvasLayer/HBoxContainer/FileOptionButton/ConfirmationDialog"]
margin_left = 6.0
margin_top = 60.0
margin_right = 48.0
margin_bottom = 75.0
text = "height"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ok" type="Button" parent="CanvasLayer/HBoxContainer/FileOptionButton/ConfirmationDialog"]
margin_left = 42.0
margin_top = 109.0
margin_right = 70.0
margin_bottom = 130.0
text = "ok"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="cancel" type="Button" parent="CanvasLayer/HBoxContainer/FileOptionButton/ConfirmationDialog"]
margin_left = 78.0
margin_top = 109.0
margin_right = 138.0
margin_bottom = 130.0
text = "cancel"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EditOptionButton" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_left = 43.0
margin_right = 81.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
theme = ExtResource( 8 )
text = "edit"

[node name="SpriteOptionButton" type="Button" parent="CanvasLayer/HBoxContainer"]
margin_left = 85.0
margin_right = 139.0
margin_bottom = 32.0
mouse_default_cursor_shape = 2
theme = ExtResource( 8 )
text = "sprite"

[node name="Canvas" type="TextureRect" parent="."]
show_behind_parent = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 480.0
margin_top = 272.0
margin_right = 544.0
margin_bottom = 336.0
mouse_filter = 2
mouse_default_cursor_shape = 3
texture = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Canvas2" type="Sprite" parent="Canvas"]
show_behind_parent = true
scale = Vector2( 0.0833333, 0.0833333 )
texture = ExtResource( 5 )
centered = false

[connection signal="pressed" from="CanvasLayer/VBoxContainer/PentTextureButton" to="CanvasLayer/VBoxContainer" method="_on_PentTextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ErasorTextureButton" to="CanvasLayer/VBoxContainer" method="_on_ErasorTextureButton_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Eyedropper" to="CanvasLayer/VBoxContainer" method="_on_Eyedropper_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/Bucket" to="CanvasLayer/VBoxContainer" method="_on_Bucket_pressed"]
[connection signal="value_changed" from="CanvasLayer/VBoxContainer2/HSlider" to="." method="_on_HSlider_value_changed"]
[connection signal="text_entered" from="CanvasLayer/VBoxContainer2/LineEdit" to="." method="_on_LineEdit_text_entered"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/FileOptionButton" to="CanvasLayer/HBoxContainer" method="_on_FileOptionButton_pressed"]
[connection signal="id_pressed" from="CanvasLayer/HBoxContainer/FileOptionButton/FilePopupMenu" to="CanvasLayer/HBoxContainer" method="_on_FilePopupMenu_id_pressed"]
[connection signal="file_selected" from="CanvasLayer/HBoxContainer/FileOptionButton/OpenFileDialog" to="." method="_on_OpenFileDialog_file_selected"]
[connection signal="file_selected" from="CanvasLayer/HBoxContainer/FileOptionButton/SaveFileDialog" to="." method="_on_SaveFileDialog_file_selected"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/FileOptionButton/ConfirmationDialog/ok" to="." method="_on_ok_pressed"]
[connection signal="pressed" from="CanvasLayer/HBoxContainer/FileOptionButton/ConfirmationDialog/cancel" to="CanvasLayer/HBoxContainer" method="_on_cancel_pressed"]
